# vlsift-test-cibw

./: .gitattributes  .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: create-and-publish-wheel.yml
vlsift/: __init__.py  cy_util.h  cy_util.pxd
vlsift/sift/: __init__.py  cysift.c  cysift.pyx
vlsift/sift/tests/: sift_test.py
vlsift/sift/vl/: generic.c  imopv.c  imopv_sse2.c  mathop.c  mathop_avx.c  mathop_avx.h  mathop_sse2.c  mathop_sse2.h  vlfloat.h
