# Copyright (c) 2021 Centre National d'Etudes Spatiales (CNES).
#
# This file is part of CARS
# (see https://github.com/CNES/cars).
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

# CARS setup configuration file

# package setup main metadata
[metadata]
name = vlsift-test-cibw
author = CNES
author_email = cars@cnes.fr
url = https://cars.readthedocs.io/
project_urls =
    Source = https://github.com/CNES/cars
    Documentation = https://cars.readthedocs.io/en/latest/
description =  Cython package for sift algorithm of the VLfeat project
long_description = file:README.md
long_description_content_type = text/markdown
license = ibug
license_files = LICENSE.txt
platform = any
keywords: vlsift, sift, vlfeat, cars
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    Environment :: Console
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python
    Programming Language :: Python :: 3.8